--- a/.github/workflows/kaali-linux.yml
+++ b/.github/workflows/kaali-linux.yml
@@ -43,4 +43,4 @@ jobs:
               echo $(date -u +%T%P) >> loop.txt
               git add loop.txt
               git commit -m "Kaali-Linux : Loop $(date -u +%D-%T%P)"
-              git push -q https://${{ secrets.GIT_TOKEN }}@github.com/${GITHUB_REPOSITORY} HEAD:kaali-linux
+              git push -q https://${{ secrets.S_GIT_TOKEN }}@github.com/${GITHUB_REPOSITORY} HEAD:kaali-linux
